# CN-Mini-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: plot_results.py
client/: __init__.py  client.py  interpolation.py  prediction.py  reconciliation.py  renderer.py
client/gui/: __init__.py  config_store.py  scene_manager.py  theme.py  validation.py  widgets.py
client/gui/scenes/: __init__.py  game_hud.py  host_dialog.py  join_dialog.py  lobby.py  main_menu.py  match_over.py  settings.py
common/: __init__.py  config.py  dtls.py  metrics_logger.py  net.py  packet.py  security.py  snapshot.py
docs/: protocol_spec.md
server/: __init__.py  client_manager.py  game_state.py  server.py  session_manager.py
tests/: run_stress.py  stress_test.py  test_game_state.py  test_gui_scenes.py  test_integration.py  test_net.py  test_packet.py  test_prediction.py  test_security.py  test_session_reconnect.py  test_snapshot.py
